--- a/public/css/signUp.css
+++ b/public/css/signUp.css
@@ -46,14 +46,14 @@ input[type="text"], input[type="password"], input[type="email"], select {
     padding: 10px;
     margin: 10px 0 20px;
     border: 1px solid #cccccc;
-    border-radius: 4px;
+    border-radius: 10px;
     font-size: 1em;
     color: #333;
     transition: border-color 0.3s ease;
 }
 
 input[type="text"]:focus, input[type="password"]:focus, input[type="email"]:focus, select:focus {
-    border-color: #008080;
+    border-color: #E35F83;
     outline: none;
 }
 
@@ -61,9 +61,9 @@ input[type="text"]:focus, input[type="password"]:focus, input[type="email"]:focu
 input[type="submit"] {
     width: 100%;
     padding: 12px;
-    background-color: #008080;
+    background-color: #E35F83;
     border: none;
-    border-radius: 4px;
+    border-radius: 10px;
     color: #ffffff;
     font-size: 1em;
     font-weight: bold;
@@ -72,7 +72,7 @@ input[type="submit"] {
 }
 
 input[type="submit"]:hover {
-    background-color: #005757;
+    background-color: #f47899;
 }
 
 /* Error messages */
