--- a/public/css/listOrder.css
+++ b/public/css/listOrder.css
@@ -1,4 +1,5 @@
 body {
+    overflow: hidden; /* غیرفعال کردن اسکرول اصلی صفحه */
     font-family: Arial, sans-serif;
     background-color: #f9f9f9;
     color: #333;
@@ -9,6 +10,8 @@ body {
 .container {
     max-width: 1200px;
     margin: 0 auto;
+    max-height: calc(100vh - 50px); /* ارتفاع کانتینر با در نظر گرفتن فضای اضافی */
+    overflow-y: auto; /* فعال کردن اسکرول عمودی */
     padding: 20px;
 
 }
@@ -22,6 +25,7 @@ h1 {
 
 .gallery {
     display: flex;
+    flex-direction: column; /* چیدمان عمودی کارت‌ها */
     flex-wrap: wrap;
     gap: 20px;
     justify-content: center;
@@ -42,12 +46,14 @@ h1 {
     align-items: center; /* تنظیم عمودی محتوا */
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
+
 .image-card img {
     width: 120px; 
     height: 120px; 
     border-radius: 10px;
     object-fit: cover; /* حفظ تناسب تصویر */
 }
+
 .actions {
     display: flex;
     gap: 10px;
@@ -62,6 +68,7 @@ h1 {
     color: #333;
     line-height: 1.6;
 }
+
 .edit-btn, .delete-btn {
     padding: 8px 16px;
     background-color: #4CAF50;
@@ -71,6 +78,7 @@ h1 {
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
+
 .edit-btn{
     margin-left: 10px;
 }
@@ -87,7 +95,6 @@ h1 {
     background-color: #e53935;
 }
 
-/* ایجاد افکت زمانی که موس روی کارت می‌رود */
 .image-card:hover {
     transform: translateY(-5px);
     box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
