--- a/public/css/upload.css
+++ b/public/css/upload.css
@@ -1,23 +1,26 @@
-body {
-    font-family: 'Arial', sans-serif;
-    margin: 0;
-    padding: 0;
-  /*  background: linear-gradient(135deg, #74ebd5, #acb6e5);*/
-   display: flex;
-   /* display: none; */
+#formdiv{
     justify-content: center;
-    align-items: center;
-    height: 100vh;
+    align-items: center; 
+    width: 100%;
+   
+    margin: 0 auto;
+    padding: 20px;
     direction: rtl;
+    
 }
 
 form {
     background: #fff;
-    padding: 20px;
+    padding:10px ;
+    padding-right: 10px;
+    /* margin-right: 63px; */
     border-radius: 10px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-    width: 100%;
-    max-width: 500px;
+    width: 80%;
+    border:1px solid red;
+    height: 100vh;
+    justify-content: center;
+    align-items: center; 
 }
 
 table {
@@ -31,7 +34,7 @@ td {
 }
 
 input[type="text"], textarea {
-    width: 100%;
+    width: 80%;
     padding: 10px;
     border: 1px solid #ddd;
     border-radius: 8px;
@@ -50,6 +53,7 @@ input[type="submit"], input[type="reset"] {
 input[type="submit"] {
     background: #28a745;
     color: #fff;
+    
 }
 
 input[type="submit"]:hover {
@@ -82,6 +86,12 @@ h1 {
     color: #333;
 }
 
+#buttons-container{
+    display: flex;
+    justify-content: center; /* افقی وسط می‌شود */
+    gap: 10px; /* فاصله بین دکمه‌ها */
+    margin-top: 20px; /* فاصله از بالای فرم */
+}
 
 #upload-button {
     padding: 10px 20px;
@@ -92,14 +102,15 @@ h1 {
     cursor: pointer;
     font-size: 1rem;
     transition: background-color 0.3s ease;
+    display: inline-block; /* برای عملکرد درست به عنوان لیبل */
 }
 
 #upload-button:hover {
-    background-color: #f36d91;
+    background-color: #c94b6c;
 }
 
 #file-name {
     margin-right: 10px;
     font-size: 0.9rem;
-    color: #555;
+    color: #333;
 }
