--- a/public/css/listOrder.css
+++ b/public/css/listOrder.css
@@ -1,5 +1,5 @@
 body {
-    direction: rtl;
+    /* direction: rtl; */
     overflow: hidden; /* غیرفعال کردن اسکرول اصلی صفحه */
     font-family: Arial, sans-serif;
     background-color: #f9f9f9;
@@ -10,7 +10,7 @@ body {
 }
 
 .container {
-    direction: rtl;
+    /* direction: rtl; */
     max-width: 1200px;
     margin: 0 auto;
     max-height: calc(100vh - 50px); /* ارتفاع کانتینر با در نظر گرفتن فضای اضافی */
@@ -31,9 +31,7 @@ h1 {
     flex-direction: column; /* چیدمان عمودی کارت‌ها */
     flex-wrap: wrap;
     gap: 20px;
-    justify-content: center;
-
-    
+    justify-content: center;  
 }
 
 .image-card {
@@ -41,8 +39,8 @@ h1 {
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-    display:flex;
-    flex-direction: row-reverse; /* نمایش تصویر در سمت راست */
+    display: flex;
+    flex-direction: row; /* تغییر جهت به ردیف افقی */
     width: 100%; 
     padding: 15px; 
     gap: 15px; /* فاصله بین تصویر و متن */
@@ -60,7 +58,7 @@ h1 {
 .actions {
     display: flex;
     gap: 10px;
-    justify-content: flex-start; /* چینش دکمه‌ها در راست */
+    justify-content: flex-start; /* چینش دکمه‌ها در چپ */
 }
 
 #details {
