--- a/public/css/dashbordStyle.css
+++ b/public/css/dashbordStyle.css
@@ -14,20 +14,8 @@ body {
   width: 100%;
 }
 
-aside {
-  display: flex;
-  flex-direction: column;
-  padding: 15px;
-  background-color: #fff2f8; 
-  color: #ffffff; 
-  border-radius: 5px;
-  overflow-y: auto; 
-  max-height: 100vh;
-}
-
 #rightSec{
   width: 20%; 
-  overflow-y: auto;
 }
 
 .leftSec {
@@ -35,9 +23,8 @@ aside {
  justify-content: center;
 }
 
-#dashbord{
+.dashbord{
   width: 100%;  
-  max-height: 550vh;
 }
 
 .Outlet {
@@ -48,10 +35,7 @@ aside {
   border-radius: 5px;
 }
 ul{
-  list-style: none;  padding: 0;
-  margin: 0;
   list-style: none;
-  max-height: 100%;
 }
 
 #item  {
@@ -63,37 +47,24 @@ ul{
 }
 
 li {
-  margin-bottom: 10px;
   font-weight: 500;
   white-space: nowrap;
-  /* padding: 10px 15px; */
-  padding: 10px;
+  padding: 10px 15px;
   color: #E35F83; 
-  
-}
- a{
-  text-decoration: none;
 }
 
-/* #log{
-  display: flex;
-  padding: 15px;
-  background-color: #ffffff;
-  border-radius: 5px;
-  margin-top: 20px;
+#log{
+  font-weight: 500;
+  white-space: nowrap;
+  padding: 10px 15px;
   color: #E35F83;
-  transition: background-color 0.3s ease-in-out;
+  list-style: none;
   direction: rtl;
+  margin-top: 2vh;
   cursor: pointer;
-} */
-#log {
-  display: flex;
-  padding: 15px;
-  background-color: #ffffff;
-  border-radius: 5px;
-  margin-top: 20px;
-  transition: background-color 0.3s ease-in-out;
+  width: 30%; 
 }
+
 
 .item:hover {
   background-color: #ffdce7;
@@ -108,13 +79,27 @@ li {
   background-color: #ffffff;
   border-radius: 5px;
   margin-top: 20px;
-  transition: background-color 0.3s ease-in-out; 
+  transition: background-color 0.3s ease-in-out; /* Smooth transition for hover effect */
+}
+
+#log {
+  display: flex;
+  padding: 15px;
+  background-color: #ffffff;
+  border-radius: 5px;
+  margin-top: 20px;
+  transition: background-color 0.3s ease-in-out; /* Smooth transition for hover effect */
+}
+
+aside {
+  display: flex;
+  padding: 15px;
+  background-color: #fff2f8; 
+  color: #ffffff; 
+  border-radius: 5px;
 }
 
 .item li {
-  padding: 5px 15px;
-}
-#log li {
   padding: 5px 15px;
 }
 
@@ -168,11 +153,6 @@ input[type="text"] {
   color: #555;
 }
 
-ul::after {
-  content: '';
-  display: block;
-  height: 20px; /* فضای خالی اضافی */
-}
- 
+  
  
   
