--- a/public/css/upload.css
+++ b/public/css/upload.css
@@ -2,6 +2,7 @@
     overflow: hidden;
 } */
 #formdiv{
+    display: flex;
     justify-content: center;
     align-items: center; 
     width: 100%;
@@ -14,6 +15,7 @@
 }
 
 form {
+    display: flex;
     background: #fff;
     padding:10px ;
     padding-right: 10px;
@@ -26,8 +28,21 @@ form {
     justify-content: center;
     align-items: center; 
 }
-
+ .Outlet {
+    display: flex;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    background-color: #fff; 
+    border-radius: 5px;
+  }
+  /*
+  .leftSec {
+    width: 80%; 
+   justify-content: center;
+  } */
 table {
+    display: flex;
     width: 100%;
     border-collapse: collapse;
 }
@@ -123,4 +138,29 @@ h1 {
     margin-top: 5px;
     display: block;
 }
+/* کانتینر اصلی */
+#main-container {
+    display: flex;
+    height: 100vh;
+    overflow: hidden;
+}
+
+/* بخش داشبورد */
+#dashboard-section {
+    width: 20%;
+    background-color: #f5f5f5; /* رنگ پس‌زمینه برای تمایز */
+    border-left: 1px solid #ddd;
+    padding: 20px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+/* بخش فرم آپلود */
+#upload-section {
+    width: 80%;
+    padding: 20px;
+    background-color: #fff;
+    overflow-y: auto; /* اسکرول عمودی در صورت نیاز */
+}
+
+/* استایل‌های فرم و دیگر عناصر بدون تغییر */
 
