--- a/public/css/style.css
+++ b/public/css/style.css
@@ -465,34 +465,22 @@ li{
 
 
 .slider {
-
     position: relative;
     width: 100%;
     height: 650px;
     overflow: hidden;
 }
 
-/* تنظیمات تصاویر در اسلایدها */
-/* .slide img {
-    width: 100%; 
-    height: 100%; 
-    object-fit: cover; 
-} */
-
-
-.first-slide {
-    display: block;
-  }
-
-  .slide {
-    display: none;
+.slide {
+    display: none;  /* ابتدا تمام اسلایدها مخفی باشند */
     width: 100%;
     height: 100%;
     padding: 20px;
     box-sizing: border-box;
     text-align: center;
-  }
-  .prev {
+}
+
+.prev {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -501,9 +489,9 @@ li{
     padding: 10px;
     cursor: pointer;
     left: 10px;
-  }
-  
-  .next {
+}
+
+.next {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -512,5 +500,4 @@ li{
     padding: 10px;
     cursor: pointer;
     right: 10px;
-  }
-  
+}
