--- a/public/css/uploads.css
+++ b/public/css/uploads.css
@@ -4,10 +4,9 @@
 #formdiv{
     display: flex;
     justify-content: center;
-    align-items: center; 
+    align-items: flex-start; 
     width: 100%;
     max-height: calc(100vh - 50px); 
-    /* overflow-y: auto; */
     margin: 0 auto;
     padding: 20px;
     direction: rtl;
@@ -15,10 +14,11 @@
 }
 
 form {
-    display: flex;
+    /* display: flex; */
+    flex-direction: column;
     background: #fff;
     padding:10px ;
-    padding-right: 10px;
+    padding-right: 20px;
     /* margin-right: 63px; */
     border-radius: 10px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
@@ -27,7 +27,15 @@ form {
     height: 100vh;
     justify-content: center;
     align-items: center; 
+    overflow-y: auto;
 }
+
+h1 {
+    text-align: center;
+    margin-bottom: 20px;
+    color: #333;
+}
+
  .Outlet {
     display: flex;
     width: 100%;
@@ -99,11 +107,6 @@ span {
     color: red;
 }
 
-h1 {
-    text-align: center;
-    margin-bottom: 20px;
-    color: #333;
-}
 
 #buttons-container{
     display: flex;
@@ -121,7 +124,7 @@ h1 {
     cursor: pointer;
     font-size: 1rem;
     transition: background-color 0.3s ease;
-    display: inline-block; /* برای عملکرد درست به عنوان لیبل */
+    display: inline-block;
 }
 
 #upload-button:hover {
@@ -138,14 +141,13 @@ h1 {
     margin-top: 5px;
     display: block;
 }
-/* کانتینر اصلی */
+
 #main-container {
     display: flex;
     height: 100vh;
     overflow: hidden;
 }
 
-/* بخش داشبورد */
 #dashboard-section {
     width: 20%;
     background-color: #f5f5f5; /* رنگ پس‌زمینه برای تمایز */
@@ -154,13 +156,9 @@ h1 {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-/* بخش فرم آپلود */
 #upload-section {
     width: 80%;
     padding: 20px;
     background-color: #fff;
-    overflow-y: auto; /* اسکرول عمودی در صورت نیاز */
+    overflow-y: auto;
 }
-
-/* استایل‌های فرم و دیگر عناصر بدون تغییر */
-
