--- a/public/css/usersList.css
+++ b/public/css/usersList.css
@@ -29,7 +29,7 @@ h1 {
 }
 
 .user-list thead {
-    background-color: #ec9ed7;
+    background-color: #E35F83;
     color: #ffffff;
     text-align: left;
 }
